--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+*.zip filter=lfs diff=lfs merge=lfs -text
+Knife_Slice_Pot_Stirring.zip filter=lfs diff=lfs merge=lfs -text
